Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34221

Errors about checksum mismatch on crash recovery are confusing

    XMLWordPrintable

Details

    Description

      The following failure does not look like an actual error:

      11.4 d2c9d86ed9465c814f7cbc29eaeb73274f550c5b

      innodb.blob-crash '16k'                  w4 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2024-05-22 15:26:23
      line
      2024-05-22 15:26:14 0 [ERROR] InnoDB: Checksum mismatch in the first page of file .//undo001
      ^ Found warnings in /home/buildbot/amd64-debian-sid/build/mysql-test/var/4/log/mysqld.1.err
      

      In the error log we have the following:

      11.4 d2c9d86ed9465c814f7cbc29eaeb73274f550c5b

      2024-05-22 15:26:14 0 [Note] InnoDB: Using AVX512 instructions
      2024-05-22 15:26:14 0 [Note] InnoDB: Using liburing
      2024-05-22 15:26:14 0 [Note] InnoDB: Initializing buffer pool, total size = 8.000MiB, chunk size = 1.000MiB
      2024-05-22 15:26:14 0 [Note] InnoDB: Completed initialization of buffer pool
      2024-05-22 15:26:14 0 [ERROR] InnoDB: Checksum mismatch in the first page of file .//undo001
      2024-05-22 15:26:14 0 [Note] InnoDB: Restoring page [page id: space=1, page number=0] of datafile './/undo001' from the doublewrite buffer. Writing 16384 bytes into file './/undo001'
      2024-05-22 15:26:14 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=79160
      2024-05-22 15:26:14 0 [Note] InnoDB: Multi-batch recovery needed at LSN 2104096
      2024-05-22 15:26:14 0 [Note] InnoDB: End of log at LSN=4347308
      2024-05-22 15:26:14 0 [Note] InnoDB: To recover: LSN 2104096/4347308; 189 pages
      2024-05-22 15:26:14 0 [Note] InnoDB: To recover: LSN 4120277/4347308; 127 pages
      2024-05-22 15:26:14 0 [Note] InnoDB: To recover: 18 pages
      2024-05-22 15:26:14 0 [Note] InnoDB: 1 transaction(s) which must be rolled back or cleaned up in total 1 row operations to undo
      2024-05-22 15:26:14 0 [Note] InnoDB: Trx id counter is 133
      2024-05-22 15:26:14 0 [Note] InnoDB: Opened 3 undo tablespaces
      2024-05-22 15:26:14 0 [Note] InnoDB: 128 rollback segments in 3 undo tablespaces are active.
      2024-05-22 15:26:14 0 [Note] InnoDB: Starting in background the rollback of recovered transactions
      2024-05-22 15:26:14 0 [Note] InnoDB: Removed temporary tablespace data file: "./ibtmp1"
      2024-05-22 15:26:14 0 [Note] InnoDB: Setting file './ibtmp1' size to 12.000MiB. Physically writing the file full; Please wait ...
      2024-05-22 15:26:14 0 [Note] InnoDB: Rolled back recovered transaction 131
      2024-05-22 15:26:14 0 [Note] InnoDB: Rollback of non-prepared transactions completed
      2024-05-22 15:26:14 0 [Note] InnoDB: File './ibtmp1' size is now 12.000MiB.
      2024-05-22 15:26:14 0 [Note] InnoDB: log sequence number 4347308 (memory-mapped); transaction id 135
      

      So, everything recovered just fine, and there is no need to scare users with that ERROR message. The Note InnoDB: Restoring page would have been enough. Only if the page could be restored from the doublewrite buffer, it should be reported as an error.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25h
                  2.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.